--- a/config/env_config.ini
+++ b/config/env_config.ini
@@ -7,3 +7,30 @@ cali_path = /home/wth/fabu/calibration-master
 fixed_path = conf/fixed_cam_calib.conf
 root_path = data/calibration/fixed_cam_calib
 resource_path = data/calibration/resources
+
+[wuzhen]
+origin_path = /home/broadxt/wuzhen/origin_data
+raw_path = /home/broadxt/wuzhen/raw_data
+parsed_path = /home/wth/fabu/calibration-master/data/calibration/fixed_cam_calib
+tar_path = /home/broadxt/wuzhen/drsu_data
+project_name = wz
+cali_root_dir = /home/wth/fabu/calibration-master/data
+height_load = 8
+
+[jichang]
+origin_path = /home/broadxt/jichang/origin_data
+raw_path = /home/broadxt/jichang/raw_data
+parsed_path = /home/wth/fabu/calibration-master/data/calibration/fixed_cam_calib
+tar_path = /home/broadxt/jichang/drsu_data
+project_name = jc
+cali_root_dir = /home/wth/fabu/calibration-master/data
+height_load = 7.2
+
+[xiaoshan]
+origin_path = /home/broadxt/xiaoshan/origin_data
+raw_path = /home/broadxt/xiaoshan/raw_data
+parsed_path = /home/broadxt/xiaoshan/parsed_data
+tar_path = /home/broadxt/xiaoshan/drsu_data
+project_name = xs
+cali_root_dir = /home/wth/fabu/calibration-master/data
+height_load = 6.2
