--- a/config/env_config.ini
+++ b/config/env_config.ini
@@ -7,6 +7,10 @@ cali_path = /home/wth/fabu/calibration-master
 fixed_path = conf/fixed_cam_calib.conf
 root_path = data/calibration/fixed_cam_calib
 resource_path = data/calibration/resources
+# 项目drsu csv文件目录, data为本项目中的data目录
+drsu_param_path = data
+# 本地存放下载的压缩文件所在更目录
+tar_path = /home/broadxt/tmp_tar
 
 [wuzhen]
 origin_path = /home/broadxt/wuzhen/origin_data
