--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,10 @@ virtualenv==20.4.2
 websocket-client==0.57.0
 Werkzeug==1.0.1
 zipp==3.4.0
+
+paramiko~=2.7.2
+pip~=21.0.1
+cryptography~=3.4.7
+setuptools~=53.0.0
+Cython~=0.29.22
+collection~=0.1.6
