--- a/config/env_config.ini
+++ b/config/env_config.ini
@@ -11,6 +11,17 @@ resource_path = data/calibration/resources
 drsu_param_path = data
 # 本地存放下载的压缩文件所在更目录
 tar_path = /home/broadxt/tmp_tar
+# 本地标定程序（c++）连接地址和端口号
+local_host = 127.0.0.1
+local_port = 8000
+
+# 远端服务器地址、端口、存放压缩文件文件夹地址
+remote_host = 172.16.4.112
+remote_port = 22
+remote_path = /home/broadxt/XXXX/drsu_data
+user_name = broadxt
+password = broadxt333
+
 
 [wuzhen]
 origin_path = /home/broadxt/wuzhen/origin_data
